# networking-static-baremetal

./: README.rst  requirements.txt  setup.cfg
networking_static_baremetal/: mech.py
