[metadata]
name = networking-static-baremetal
author = Sam Betts
author-email = moooo
home-page = google.com
summary = This for stuff
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
description-file =
    README.rst

[files]
packages =
    networking_generic_switch

[entry_points]
neutron.ml2.mechanism_drivers =
    static-baremetal = networking_static_baremetal.mech:StaticMechDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
